# kidjig-patient-assitant

./: .env.example  .gitignore  README.md  pyproject.toml
src/ai/llm/: medical_diagnosis.py
src/ai/speech/: doctor_voice.py  patient_voice.py
src/ai/vision/: image_processor.py
src/core/: config.py  constants.py
src/core/prompts/: medical_prompts.py
src/interface/: gradio_app.py
src/llm/: doctor_brain.py  gradio_app.py  tts_patient.py  voice_doctor.py  voice_patient.py
src/ui/: gradio_app.py
